# IA_portafolio

./: .gitignore  Readme.md  chat.py  chatbot.py  main.py  pyproject.toml
